agregando interaccion con html mediante el DOM

--- a/proyectofinal/index.html
+++ b/proyectofinal/index.html
@@ -34,7 +34,7 @@
         <section class="container">
             <h2>Productos</h2>
             <div class="cards">
-                <div class="card">
+                <!-- <div class="card">
                     <img src="img/camiseta titular.webp" alt="">
                     <h3>Camiseta Titular</h3>
                     <p>$15000</p>
@@ -69,7 +69,7 @@
                     <h3>Gorra</h3>
                     <p>$3000</p>
                     <button class="btn">Agregar al Carrito</button>
-                </div>
+                </div> -->
             </div>
             
         </section>
