--- a/proyectofinal/index.html
+++ b/proyectofinal/index.html
@@ -18,7 +18,7 @@
         <div class="container nav">
             <a href="index.html"><img src="img/logo.png"></a>
             <h1>Tienda del Club Atletico River Plate</h1>
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart" width="64"
+            <svg xmlns="http://www.w3.org/2000/svg"  id="carrito" class="icon icon-tabler icon-tabler-shopping-cart" width="64"
                 height="64" viewBox="0 0 24 24" stroke-width="2" stroke="#ffffff" fill="none" stroke-linecap="round"
                 stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -74,6 +74,7 @@
             
         </section>
     </main>
+
 
 
     <script src="js/app.js"></script>
