segunda preentrega final

--- a/proyectofinal/index.html
+++ b/proyectofinal/index.html
@@ -18,21 +18,25 @@
         <div class="container nav">
             <a href="index.html"><img src="img/logo.png"></a>
             <h1>Tienda del Club Atletico River Plate</h1>
-            <svg xmlns="http://www.w3.org/2000/svg"  id="carrito" class="icon icon-tabler icon-tabler-shopping-cart" width="64"
-                height="64" viewBox="0 0 24 24" stroke-width="2" stroke="#ffffff" fill="none" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <circle cx="6" cy="19" r="2" />
-                <circle cx="17" cy="19" r="2" />
-                <path d="M17 17h-11v-14h-2" />
-                <path d="M6 5l14 1l-1 7h-13" />
-            </svg>
+            <div class="carritoLogo">
+                <svg xmlns="http://www.w3.org/2000/svg" id="carrito" class="icon icon-tabler icon-tabler-shopping-cart"
+                    width="64" height="64" viewBox="0 0 24 24" stroke-width="2" stroke="#ffffff" fill="none"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <circle cx="6" cy="19" r="2" />
+                    <circle cx="17" cy="19" r="2" />
+                    <path d="M17 17h-11v-14h-2" />
+                    <path d="M6 5l14 1l-1 7h-13" />
+                </svg><span class="contador">0</span>
+            </div>
+
         </div>
     </header>
 
     <main>
         <section class="container">
             <h2>Productos</h2>
+            <!-- <input id="buscador_productos" class="buscador" type="text" placeholder="Buscar Producto"> -->
             <div class="cards">
                 <!-- <div class="card">
                     <img src="img/camiseta titular.webp" alt="">
@@ -71,7 +75,18 @@
                     <button class="btn">Agregar al Carrito</button>
                 </div> -->
             </div>
-            
+        </section>
+
+        <section id="modal_overlay" class="modal">
+            <div class="modal_container">
+                <div id="cards_carrito" class="cards"></div>
+                <p class="contenedor_total">Precio Total: <span class="total">0<span></p>
+                <div class="botones">
+                    <button class="finalizar_compra btn">Comprar</button>
+                    <button id="vaciar_carrito" class="btn">Vaciar Carrito</button>
+                    <button class="modal_close btn">Cerrar</button>
+                </div>
+            </div>
         </section>
     </main>
 
