agrego opedador spread y destructuracion para optimizar el proyecto

--- a/proyectofinal/index.html
+++ b/proyectofinal/index.html
@@ -79,7 +79,7 @@
 
         <section id="modal_overlay" class="modal">
             <div class="modal_container">
-                <div id="cards_carrito" class="cards"></div>
+                <div id="cards_carrito" class="cards_carrito"></div>
                 <p class="contenedor_total">Precio Total: <span class="total">0<span></p>
                 <div class="botones">
                     <button class="finalizar_compra btn">Comprar</button>
