--- a/proyectofinal/index.html
+++ b/proyectofinal/index.html
@@ -36,6 +36,7 @@
 
     <main>
         <section class="container">
+            <input type="text" class="search" placeholder="search"/>
             <h2>Productos</h2>
             <!-- <input id="buscador_productos" class="buscador" type="text" placeholder="Buscar Producto"> -->
             <div class="cards">
